deployment-automation/service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: #{docker.repo1}#
  namespace: #{namespace}#
  annotations:
    repo-tag: #{tag}#
  labels:
    deploy: "#{deploy.service1}#"
spec:
  selector:
    app: #{docker.repo1}#
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #{docker.repo1}#
  namespace: #{namespace}#
  annotations:
    repo-tag: #{tag}#
  labels:
    deploy: "#{deploy.service1}#"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: #{docker.repo1}#
  template:
    metadata:
      repo-tag: #{tag}#
      labels:
        app: #{docker.repo1}#
    spec:
      containers:
      - name: #{docker.repo1}#
        image: docker.io/#{docker.username}#/#{docker.repo1}#:#{tag}#
        resources:
          requests:
            memory: "150Mi"
            cpu: "100m"
          limits:
            memory: "200Mi"
            cpu: "200m"
        imagePullPolicy: Always
      imagePullSecrets:
        - name: pullsecret
