deployment-automation/service_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: #{docker.repo_front}#
  namespace: #{namespace}#
spec:
  selector:
    app: #{docker.repo_front}#
  ports:
  - port: 80
    protocol: TCP
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #{docker.repo_front}#
  namespace: #{namespace}#
spec:
  replicas: 1
  selector:
    matchLabels:
      app: #{docker.repo_front}#
  template:
    metadata:
      labels:
        app: #{docker.repo_front}#
    spec:
      containers:
      - name: #{docker.repo_front}#
        image: docker.io/#{docker.username}#/#{docker.repo_front}#:#{tag}#
        imagePullPolicy: Always
        resources:
          requests:
            memory: "500Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "750m"
      imagePullPolicy: Always
      imagePullSecrets:
        - name: pullsecret
