deployment-automation/ingress_frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: #{namespace}#
  labels:
    deploy: "#{deploy.front}#"
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    repo-tag: #{tag}#
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: #{docker.repo_front}#
            port:
              number: 80
